WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172238
Debug ASSERT: WebCore::RenderImageResource::shutdown
https://bugs.webkit.org/show_bug.cgi?id=172238
Summary
Debug ASSERT: WebCore::RenderImageResource::shutdown
alan
Reported
2017-05-17 13:27:25 PDT
0 com.apple.JavaScriptCore 0x0000000110ffd784 WTFCrash + 36 1 com.apple.WebCore 0x0000000115969b07 WebCore::RenderImageResource::shutdown() + 71 2 com.apple.WebCore 0x0000000115965d8b WebCore::RenderImage::~RenderImage() + 59 3 com.apple.WebCore 0x0000000115a1bd35 WebCore::RenderMedia::~RenderMedia() + 21 4 com.apple.WebCore 0x0000000115b8b165 WebCore::RenderVideo::~RenderVideo() + 85 5 com.apple.WebCore 0x0000000115b8b1b5 WebCore::RenderVideo::~RenderVideo() + 21 6 com.apple.WebCore 0x0000000115b8b1d9 WebCore::RenderVideo::~RenderVideo() + 25 7 com.apple.WebCore 0x0000000115a4b5f7 WebCore::RenderObject::destroy() + 135 8 com.apple.WebCore 0x0000000115b82775 WebCore::RenderTreeUpdater::createRenderer(WebCore::Element&, WebCore::RenderStyle&&) + 421 9 com.apple.WebCore 0x0000000115b817a6 WebCore::RenderTreeUpdater::updateElementRenderer(WebCore::Element&, WebCore::Style::ElementUpdate const&) + 550 10 com.apple.WebCore 0x0000000115b810ec WebCore::RenderTreeUpdater::updateRenderTree(WebCore::ContainerNode&) + 764 11 com.apple.WebCore 0x0000000115b80ae5 WebCore::RenderTreeUpdater::commit(std::__1::unique_ptr<WebCore::Style::Update const, std::__1::default_delete<WebCore::Style::Update const> >) + 853 12 com.apple.WebCore 0x0000000113f8898b WebCore::Document::recalcStyle(WebCore::Style::Change) + 1835 13 com.apple.WebCore 0x0000000113f7b631 WebCore::Document::updateStyleIfNeeded() + 273 14 com.apple.WebCore 0x0000000114333931 WebCore::FrameLoader::dispatchUnloadEvents(WebCore::UnloadEventPolicy) + 913 15 com.apple.WebCore 0x00000001143334c5 WebCore::FrameLoader::stopLoading(WebCore::UnloadEventPolicy) + 133 16 com.apple.WebCore 0x0000000114333db5 WebCore::FrameLoader::closeURL() + 213 17 com.apple.WebCore 0x000000011433fde5 WebCore::FrameLoader::detachFromParent() + 53 18 com.apple.WebCore 0x00000001143403fb WebCore::FrameLoader::frameDetached() + 75 19 com.apple.WebCore 0x00000001145239a2 WebCore::HTMLFrameOwnerElement::disconnectContentFrame() + 66 20 com.apple.WebCore 0x0000000113c2cfd7 WebCore::disconnectSubframes(WebCore::ContainerNode&, WebCore::SubframeDisconnectPolicy) + 311 21 com.apple.WebCore 0x0000000113c1d1c2 WebCore::disconnectSubframesIfNeeded(WebCore::ContainerNode&, WebCore::SubframeDisconnectPolicy) + 50 22 com.apple.WebCore 0x0000000113c1d29a WebCore::willRemoveChild(WebCore::ContainerNode&, WebCore::Node&) + 202 23 com.apple.WebCore 0x0000000113c1cf8d WebCore::ContainerNode::removeChild(WebCore::Node&) + 285 24 com.apple.WebCore 0x00000001156aa3eb WebCore::Node::removeChild(WebCore::Node&) + 139 25 com.apple.WebCore 0x0000000114f1819f WebCore::JSNode::removeChild(JSC::ExecState&) + 319 26 com.apple.WebCore 0x0000000114f162a1 WebCore::jsNodePrototypeFunctionRemoveChildCaller(JSC::ExecState*, WebCore::JSNode*, JSC::ThrowScope&) + 33
Attachments
Patch
(4.73 KB, patch)
2017-05-17 13:58 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2017-05-17 13:27:50 PDT
rdar://problem/30064601
alan
Comment 2
2017-05-17 13:58:39 PDT
Created
attachment 310441
[details]
Patch
WebKit Commit Bot
Comment 3
2017-05-17 14:28:46 PDT
The commit-queue encountered the following flaky tests while processing
attachment 310441
[details]
: The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4
2017-05-17 16:30:51 PDT
Comment on
attachment 310441
[details]
Patch Clearing flags on attachment: 310441 Committed
r217012
: <
http://trac.webkit.org/changeset/217012
>
WebKit Commit Bot
Comment 5
2017-05-17 16:30:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug