Debug ASSERT: WebCore::RenderImageResource::shutdown https://bugs.webkit.org/show_bug.cgi?id=172238 <rdar://problem/30064601>

Reviewed by Simon Fraser.

Source/WebCore:

While constructing new renderers, as part of the render tree update, we check if the insertion point is valid for them.
When this newly constructed child renderer can't be injected to a specific place, we destroy it right away.
This assert was added with the assumption that the image resource object gets initialized
(through RenderObject::initializeStyle) even when the renderer turns out to be invalid.

Test: fast/images/assert-when-insertion-point-is-incorrect.html

* rendering/RenderImageResource.cpp:
(WebCore::RenderImageResource::RenderImageResource):
(WebCore::RenderImageResource::shutdown):
* rendering/RenderImageResource.h:

LayoutTests:

* fast/images/assert-when-insertion-point-is-incorrect-expected.txt: Added.
* fast/images/assert-when-insertion-point-is-incorrect.html: Added.


Canonical link: https://commits.webkit.org/189169@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217012 268f45cc-cd09-0410-ab3c-d52691b4dbfc